[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/Window/Window.tscn" type="PackedScene" id=1]
[ext_resource path="res://modloader/ModLoaderMenu.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]

[node name="Window" instance=ExtResource( 1 )]
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 120.0
script = ExtResource( 2 )

[node name="VBoxContainer" parent="." index="0"]
margin_right = 399.0
margin_bottom = 219.0

[node name="TitleBar" parent="VBoxContainer" index="0"]
margin_right = 398.0

[node name="Title" parent="VBoxContainer/TitleBar" index="0"]
text = "Mod List"

[node name="Close" type="Button" parent="VBoxContainer/TitleBar" index="1"]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 12.0
custom_colors/font_color_hover = Color( 1, 0.2, 0.231373, 1 )
text = "Close"
flat = true

[node name="ModsLocation" type="Button" parent="VBoxContainer/TitleBar" index="2"]
unique_name_in_owner = true
margin_left = 305.0
margin_right = 394.0
margin_bottom = 12.0
custom_colors/font_color_hover = Color( 1, 0.2, 0.231373, 1 )
text = "Open Mods Folder"
flat = true

[node name="Contents" parent="VBoxContainer" index="1"]
margin_right = 398.0
margin_bottom = 205.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Contents" index="0"]
margin_left = 1.0
margin_top = 1.0
margin_right = 397.0
margin_bottom = 194.0
size_flags_horizontal = 3
theme = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Contents/HBoxContainer" index="0"]
margin_right = 120.0
margin_bottom = 193.0
rect_min_size = Vector2( 120, 0 )
size_flags_stretch_ratio = 0.4
theme = ExtResource( 3 )
scroll_horizontal_enabled = false

[node name="Mods" type="VBoxContainer" parent="VBoxContainer/Contents/HBoxContainer/ScrollContainer" index="0"]
unique_name_in_owner = true
margin_right = 120.0
rect_clip_content = true
size_flags_horizontal = 3

[node name="VScrollBar" type="VSeparator" parent="VBoxContainer/Contents/HBoxContainer" index="1"]
margin_left = 121.0
margin_right = 125.0
margin_bottom = 193.0

[node name="ModInfoContainer" type="PanelContainer" parent="VBoxContainer/Contents/HBoxContainer" index="2"]
unique_name_in_owner = true
margin_left = 126.0
margin_right = 396.0
margin_bottom = 193.0
rect_min_size = Vector2( 0, 190 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/Contents/HBoxContainer/ModInfoContainer" index="0"]
margin_left = 1.0
margin_top = 1.0
margin_right = 269.0
margin_bottom = 192.0
size_flags_horizontal = 3
tab_align = 0

[node name="Mod Info" type="VBoxContainer" parent="VBoxContainer/Contents/HBoxContainer/ModInfoContainer/TabContainer" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 11.0
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="VBoxContainer" index="2"]
margin_top = 206.0
margin_right = 398.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ModCredits" type="Button" parent="VBoxContainer/Panel/HBoxContainer" index="0"]
unique_name_in_owner = true
margin_right = 132.0
margin_bottom = 12.0
size_flags_horizontal = 3
text = "ModLoader Credits"

[node name="WorkshopButton" type="Button" parent="VBoxContainer/Panel/HBoxContainer" index="1"]
unique_name_in_owner = true
margin_left = 133.0
margin_right = 265.0
margin_bottom = 12.0
size_flags_horizontal = 3
text = "Visit Steam Workshop"

[node name="WorkshopUploader" type="Button" parent="VBoxContainer/Panel/HBoxContainer" index="2"]
unique_name_in_owner = true
margin_left = 266.0
margin_right = 398.0
margin_bottom = 12.0
size_flags_horizontal = 3
text = "Upload to Steam Workshop"
